# pwn--

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PACKAGES  README.md  appveyor.yml  azure-pipelines.yml  pwn++.sln
Docs/: CMakeLists.txt  Doxyfile.in  README.md  _sidebar.md  build.md  examples-assembly.md  examples-context.md  examples-crypto.md  examples-ctf.md  examples-errors.md  examples-process.md  examples-registry.md  examples-service.md  examples-system.md  examples.md  index.html  setup.md
Docs/conf/: Doxyfile.in
Docs/css/: doxygen-awesome.css
Docs/examples/common/: assembly.md  basic.md  context.md  ctf.md  utils.md
Docs/examples/win32/: alpc.md  fs.md  jobs.md  kernel.md  system.md
Modules/: CMakeLists.txt
Modules/Assembly/: CMakeLists.txt
Modules/Assembly/Include/: Disassembler.hpp
Modules/Assembly/Source/: Disassembler.cpp
Modules/Assembly/Tests/: CMakeLists.txt  pwn_disasm.cpp
Modules/Backdoor/: CMakeLists.txt
Modules/Backdoor/Include/: Backdoor.hpp
Modules/Backdoor/Source/: Backdoor.cpp
Modules/Binary/: CMakeLists.txt
Modules/Binary/Tests/: CMakeLists.txt  pwn_binary_pe.cpp
Modules/CTF/: CMakeLists.txt
Modules/CTF/Tests/: CMakeLists.txt  pwn_ctf_process_win.cpp  pwn_ctf_remote_win.cpp
Modules/Common/: CMakeLists.txt
Modules/Common/Include/: Architecture.hpp  Common.hpp  Common.ixx  Context.hpp  Error.hpp  Formatters.hpp  Handle.hpp  Literals.hpp  Log.hpp  Utils.hpp  common.hpp  nt.hpp  pch.hpp
Modules/Common/Source/: Architecture.cpp  Common.cxx  Context.cpp  Error.cpp  Log.cpp  Utils.cpp
Modules/Common/Tests/: CMakeLists.txt  perf_pwn_common.cpp  pwn_common.cpp  tests_pwn_common.cpp
Modules/Crypto/: CMakeLists.txt
Modules/Crypto/Include/: Crypto.hpp
Modules/Crypto/Source/: Crypto.cpp
Modules/Crypto/Tests/: CMakeLists.txt  pwn_crypto.cpp
Modules/FileSystem/: CMakeLists.txt
Modules/FileSystem/Tests/: CMakeLists.txt  main.cpp
Modules/Network/: CMakeLists.txt
Modules/Network/Include/: Tube.hpp  tube.hpp
Modules/Network/Source/: Tube.cpp
Modules/Network/Tests/: CMakeLists.txt
Modules/Process/: CMakeLists.txt
Modules/Process/Tests/: CMakeLists.txt  pwn_win_process.cpp  pwn_win_thread.cpp
Modules/Registry/: CMakeLists.txt
Modules/Registry/Source/: Registry.cpp
Modules/Registry/Tests/: CMakeLists.txt  pwn_win_registry.cpp
Modules/Remote/: CMakeLists.txt
Modules/Remote/Tests/: CMakeLists.txt
Modules/Security/: CMakeLists.txt
Modules/Security/Tests/: CMakeLists.txt  pwn_win_token.cpp
Modules/Service/: CMakeLists.txt
Modules/Service/Tests/: CMakeLists.txt
Modules/Shellcode/: CMakeLists.txt
Modules/Shellcode/Include/: Pattern.hpp
Modules/Shellcode/Source/: Pattern.cpp
Modules/Shellcode/Tests/: CMakeLists.txt  main.cpp  pwn_shellcode_pattern.cpp
Modules/Symbols/: CMakeLists.txt
Modules/Symbols/Include/: API.hpp  Symbols.hpp
Modules/Symbols/Source/: Symbols.cpp
Modules/Symbols/Tests/: CMakeLists.txt  pwn_win_symbols.cpp
Modules/System/: CMakeLists.txt
Modules/System/Tests/: CMakeLists.txt  pwn_linux_system.cpp  pwn_win_object.cpp  pwn_win_system.cpp
Tools/Linux/: CMakeLists.txt
Tools/Linux/ExploitTemplate/: main.cpp
Tools/Win32/: CMakeLists.txt
Tools/Win32/AppContainMe/: AppContainMe.cpp
Tools/Win32/Backdoor/: Backdoor.cpp
Tools/Win32/BasicExample/: main.cpp
Tools/Win32/ExploitTemplate/: xp.cpp
Tools/Win32/HexdumpFile/: HexdumpFile.cpp
Tools/Win32/LoadDriver/: LoadDriver.cpp
Tools/Win32/ProcessGhosting/: ProcessGhosting.cpp
Tools/Win32/ProcessReparent/: ProcessReparent.cpp
Tools/Win32/SyscallTrace/: SyscallTrace.cpp  trampoline.asm
docs/: CMakeLists.txt  Doxyfile.in  README.md  _sidebar.md  build.md  examples-alpc.md  examples-assembly.md  examples-basic.md  examples-context.md  examples-crypto.md  examples-ctf.md  examples-jobs.md  examples-kernel.md  examples-service.md  examples-system.md  examples-utils.md  examples.md  index.html  setup.md
docs/css/: doxygen-awesome-darkmode-toggle.js  doxygen-awesome-interactive-toc.js
docs/examples/: assembly.md  crypto.md  fs.md  process.md  registry.md
pwn++/: .clang-format  CMakeLists.txt  alpc.cpp  alpc.h  asm.cpp  asm.h  asm_process.asm  backdoor.cpp  backdoor.h  common.h  constants.h  context.cpp  context.h  cpu.cpp  cpu.h  crypto.cpp  crypto.h  disasm.cpp  disasm.h  dllmain.cpp  framework.h  fs.cpp  fs.h  handle.cpp  handle.h  job.cpp  job.h  kernel.cpp  kernel.h  log.cpp  log.h  nt.h  process.cpp  process.h  pwn++.vcxproj  pwn++.vcxproj.filters  pwn.cpp  pwn.h  pwn.hpp.in  pwn_nt.h  (+14 more)
pwn++/Include/: pwn.hpp  pwn.ixx
pwn++/Source/Linux/: dllmain.cpp
pwn++/Source/Win32/: dllmain.cpp
src/: .clang-format  CMakeLists.txt
src/inc/: architecture.hpp  asm.hpp  backdoor.hpp  common.hpp  constants.hpp  constants.hpp.in  context.hpp  crypto.hpp  disasm.hpp  error.hpp  handle.hpp  log.hpp  memory.hpp  pch.hpp  pwn.hpp  resolver.hpp  tube.hpp  utils.hpp
src/inc/linux/: framework.hpp
src/inc/win/: alpc.hpp  backdoor.hpp  cpu.hpp  crypto.hpp  framework.hpp  fs.hpp  handle.hpp  job.hpp  kernel.hpp  nt.hpp  process.hpp  registry.hpp  rpc.hpp  (+3 more)
src/pwn++/: CMakeLists.txt  architecture.cpp  asm.cpp  context.cpp  crypto.cpp  disasm.cpp  error.cpp  log.cpp  memory.cpp  pwn.cpp  tube.cpp  utils.cpp
src/tests/: CMakeLists.txt  main.cpp  pwn++-tests.old  pwn++-tests.vcxproj  pwn++-tests.vcxproj.filters  pwn_assm_disasm.cpp  pwn_crypto.cpp  pwn_utils.cpp
tests/: CMakeLists.txt  main.cpp  pwn_assm_disasm.cpp  pwn_crypto.cpp  pwn_utils.cpp
tests/common/: pwn_assm_disasm.cpp  pwn_crypto.cpp  pwn_utils.cpp  pwn_version.cpp
tests/win32/: pwn_win_ctf.cpp  pwn_win_object.cpp  pwn_win_process.cpp  pwn_win_registry.cpp  pwn_win_symbols.cpp  pwn_win_system.cpp  pwn_win_thread.cpp  pwn_win_token.cpp
tools/: CMakeLists.txt
tools/AppContainMe/: AppContainMe.vcxproj  main.cpp
tools/HexdumpFile/: HexdumpFile.vcxproj.filters  main.cpp
tools/ProcessReparent/: main.cpp
tools/linux/: CMakeLists.txt
tools/win/: CMakeLists.txt
tools/win32/: CMakeLists.txt  dllmain.cpp
(+188 files in other folders)
