find_package(Doxygen REQUIRED)

get_target_property(PWN_PUBLIC_INTERFACES pwn++ INTERFACE_INCLUDE_DIRECTORIES)
file(GLOB_RECURSE PWN_PUBLIC_HEADERS ${PWN_PUBLIC_INTERFACES}/*.hpp)

set(PWN_DOCS_ROOT_DIR "${PWNLIB_ROOT_DIR}/docs")
set(PWN_DOCS_API_ROOT_DIR "${PWN_DOCS_ROOT_DIR}/api")

set(DOXYGEN_INDEX_FILE "${PWN_DOCS_API_ROOT_DIR}/html/index.html")
set(DOXYGEN_INPUT_DIR ${PROJECT_SOURCE_DIR}/src)
set(DOXYGEN_OUTPUT_DIR ${PWN_DOCS_API_ROOT_DIR})
set(DOXYGEN_CSS "${PWN_DOCS_ROOT_DIR}/css/doxygen-awesome.css ${PWN_DOCS_ROOT_DIR}/css/doxygen-awesome-sidebar-only.css")
set(DOXYGEN_INDEX_FILE ${DOXYGEN_OUTPUT_DIR}/html/index.html)
set(DOXYFILE_IN ${PWN_DOCS_ROOT_DIR}/Doxyfile.in)
set(DOXYFILE_OUT ${PWN_DOCS_ROOT_DIR}/Doxyfile)

configure_file(${DOXYFILE_IN} ${DOXYFILE_OUT} @ONLY)

add_custom_command(
    OUTPUT ${DOXYGEN_INDEX_FILE}
    DEPENDS ${PROJECT_NAME}
    COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYFILE_OUT}
    MAIN_DEPENDENCY ${DOXYFILE_OUT} ${DOXYFILE_IN}
    WORKING_DIRECTORY ${PWN_DOCS_API_ROOT_DIR}
    COMMENT "Generating API Docs")

add_custom_target(Doxygen ALL DEPENDS ${DOXYGEN_INDEX_FILE})
